# Plant-Desease-Prediction-Using-Deep-Learning

./: .env  .gitignore  README.md  docker-compose.yaml  requirements.txt
.github/workflows/: deploy.yaml
backend/: .env  Dockerfile  client.py  file.txt  main.py  predict.py  pyproject.toml
backend/helpers/: history.json  seed-metrics.py
backend/models/: classes.json
frontend/: Dockerfile  next.config.ts  package-lock.json  readme.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/api/history/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/metrics/: page.tsx
frontend/app/register/: page.tsx
frontend/app/team/: page.tsx
model/: New Text Document.txt  preprocess.py  requirements.txt  testing.ipynb  train.py
