[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.1",
    "numpy>=2.4.6",
    "pillow>=11.0.0",
    "pymongo>=4.17.0",
    "scikit-learn>=1.8.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.0",
    "uvicorn>=0.34.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]
